--- a/estilo.css
+++ b/estilo.css
@@ -3,47 +3,147 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+:root{
+    --COLOR-DARK-BACKGROUND: #2C2E3E;
+    --COLOR-RED-ERROR: #F90716;
+    --COLOR-WHITE: #F6F6F6;
+    --COLOR-GREEN: #2FDD92;
+    --FONT-PRIMARY:  'Montserrat', sans-serif;
+
+
+}
 .container{
     position: relative;
-    top: 100px;
+    top: 50px;
     left: 0;
     width: 40%;
-    min-height: 300px;
+    min-height: 100%;
     margin: auto;
-    background-color: rgba(0, 0, 0, 0.424);
-    border-radius: 10px;
-    padding: 10px;
+    
+  
+    padding: 15px 0 ;
 }
-.container h2{
+.container h1{
     text-align: center;
-    font-size: 1.5em;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2em;
+    font-family: var(--FONT-PRIMARY);
+    color: var(--COLOR-WHITE);
+    padding: 0 0 50px 0;
 }
 #formulario{
     height: 100%;
+    margin: 50px 0;
     padding: 20px;
     display: flex;
     flex-direction: column;
+    background-color: var(--COLOR-DARK-BACKGROUND);
+    border-radius: 10px;
 }
-#formulario input {
+
+.input-name{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 5px;
+}
+.input-name label {
+    color: var(--COLOR-WHITE);
+    font-family: var(--FONT-PRIMARY);
+    font-size: 0.8em;
+}
+.input-name input {
     margin: 1em 0;
     height: 2.5em;
+    border: none;
+    background-color: var(--COLOR-DARK-BACKGROUND);
+    border-bottom:1px solid var(--COLOR-WHITE) ;
+    outline: none;
+    color: var(--COLOR-WHITE);
 }
+
+.input-email{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 20px;
+    gap: 10px;
+}
+.input-email label {
+    color: var(--COLOR-WHITE);
+    font-family: var(--FONT-PRIMARY);
+    font-size: 0.8em;
+}
+.input-email input {
+    margin: 1em 0;
+    height: 2.5em;
+    border: none;
+    background-color: var(--COLOR-DARK-BACKGROUND);
+    border-bottom:1px solid var(--COLOR-WHITE) ;
+    outline: none;
+    color: var(--COLOR-WHITE);
+}
+
 #formulario button{
-    margin: 1em 0;
     height: 2.5em;
-    background-color: rgb(29, 101, 235);
+    background-color: var(--COLOR-GREEN);
     outline: none;
     border: none;
     border-radius: 5px;
     color: #fff;
+    cursor: pointer;
+    margin: 20px 0;
+    
+}
+#formulario button:hover{
+    background-color: #269464;
+    transition: all 0.5s ease-out;
 }
 
 .error{
-    color: red;
+    
+    font-family: var(--FONT-PRIMARY);
+    color: var(--COLOR-RED-ERROR);
     font-weight: bolder;
+    font-size: 0.8em;
+    
 }
 .exito{
-    color: green;
+    color:  var(--COLOR-WHITE);
+    font-family: var(--FONT-PRIMARY);
     font-weight: bolder;
+    font-size: .9em;
+    padding: 15px;
+}
+.ocultar{
+    display: none;
+}
+
+.alertEx{
+    position: absolute;
+    top: 1%;
+    left: 0;
+    background-color: var(--COLOR-GREEN);
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    color:  var(--COLOR-WHITE);
+    font-family: var(--FONT-PRIMARY);
+    font-weight: bolder;
+    font-size: .9em;
+    padding: 15px;
+    
+}
+
+
+@media (max-width: 800px){
+    .container{
+        position: relative;
+        top: 50px;
+        left: 0;
+        width: 80%;
+        min-height: 100%;
+        margin: auto;
+        padding: 15px 0 ;
+    }
 }
